cepheus: defconfig: Enable exposure adjustment driver
Change-Id: I5cab33a98b307c580b3b944d8ed7e32fe6593672

--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -874,3 +874,4 @@ CONFIG_ZRAM_SIZE_OVERRIDE=2
 CONFIG_TCP_CONG_AGILESD=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_CRYPTO_ZSTD=y
+CONFIG_EXPOSURE_ADJUSTMENT=y
