Change some configs to make it booteable

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-paranoid"
+CONFIG_LOCALVERSION="-Quantic-Kernel_Beta-4"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -637,14 +637,8 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_IMG_GZ_DTB=y
-# CONFIG_IMG_DTB is not set
-CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
-# CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
-CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
-CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_KRYO_PMU_WORKAROUND=y
 
 #
 # Userspace binary formats
@@ -835,7 +829,7 @@ CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-# CONFIG_BRIDGE_NETFILTER is not set
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -3364,7 +3358,7 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 # CONFIG_BACKLIGHT_PWM is not set
@@ -4601,7 +4595,7 @@ CONFIG_QCOM_SM8150_LLCC=y
 # CONFIG_QCOM_ATOLL_LLCC is not set
 # CONFIG_QCOM_SDXPRAIRIE_LLCC is not set
 # CONFIG_QCOM_LLCC_AMON is not set
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
