Add WiFi to kernel

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -322,7 +322,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
@@ -1958,10 +1958,10 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_SIERRA_NET is not set
 # CONFIG_USB_VL600 is not set
 # CONFIG_USB_NET_CH9200 is not set
-CONFIG_WLAN=y
+CONFIG_WLAN_VENDOR_QCOM=y
 # CONFIG_WIRELESS_WDS is not set
-CONFIG_WLAN_VENDOR_ADMTEK=y
-CONFIG_WLAN_VENDOR_ATH=y
+#CONFIG_WLAN_VENDOR_ADMTEK=y
+#CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
@@ -1972,12 +1972,12 @@ CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
 CONFIG_WIL6210_DEBUGFS=y
 CONFIG_WIL6210_WRITE_IOCTL=y
-CONFIG_WLAN_VENDOR_ATMEL=y
+#CONFIG_WLAN_VENDOR_ATMEL=y
 # CONFIG_ATMEL is not set
-CONFIG_WLAN_VENDOR_BROADCOM=y
+#CONFIG_WLAN_VENDOR_BROADCOM=y
 # CONFIG_BRCMFMAC is not set
-CONFIG_WLAN_VENDOR_CISCO=y
-CONFIG_WLAN_VENDOR_INTEL=y
+#CONFIG_WLAN_VENDOR_CISCO=y
+#CONFIG_WLAN_VENDOR_INTEL=y
 # CONFIG_IPW2100 is not set
 # CONFIG_IPW2200 is not set
 CONFIG_WLAN_VENDOR_INTERSIL=y
@@ -1987,13 +1987,13 @@ CONFIG_WLAN_VENDOR_INTERSIL=y
 CONFIG_WLAN_VENDOR_MARVELL=y
 # CONFIG_LIBERTAS is not set
 # CONFIG_MWIFIEX is not set
-CONFIG_WLAN_VENDOR_MEDIATEK=y
-CONFIG_WLAN_VENDOR_RALINK=y
-CONFIG_WLAN_VENDOR_REALTEK=y
-CONFIG_WLAN_VENDOR_RSI=y
-CONFIG_WLAN_VENDOR_ST=y
-CONFIG_WLAN_VENDOR_TI=y
-CONFIG_WLAN_VENDOR_ZYDAS=y
+#CONFIG_WLAN_VENDOR_MEDIATEK=y
+#CONFIG_WLAN_VENDOR_RALINK=y
+#CONFIG_WLAN_VENDOR_REALTEK=y
+#CONFIG_WLAN_VENDOR_RSI=y
+#CONFIG_WLAN_VENDOR_ST=y
+#CONFIG_WLAN_VENDOR_TI=y
+#CONFIG_WLAN_VENDOR_ZYDAS=y
 # CONFIG_USB_ZD1201 is not set
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 # CONFIG_QTNFMAC_PEARL_PCIE is not set
