Forgot to add GPU OC file

--- a/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-v2.dtsi
@@ -617,11 +617,13 @@
 
 	/delete-property/qcom,initial-pwrlevel;
 
+	qcom,initial-pwrlevel = <7>;
+
 	operating-points-v2 = <&gpu_opp_table_v2>;
 
 	qcom,gpu-speed-bin = <0x4130 0xe0000000 29>;
 
-	/delete-node/qcom,gpu-pwrlevels;
+/*	/delete-node/qcom,gpu-pwrlevels;*/
 	qcom,gpu-pwrlevel-bins {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -636,7 +638,7 @@
 
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <675000000>;
+				qcom,gpu-freq = <835000000>;
 				qcom,bus-freq = <11>;
 				qcom,bus-min = <11>;
 				qcom,bus-max = <11>;
@@ -644,13 +646,29 @@
 
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
+				qcom,gpu-freq = <735000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <11>;
+				qcom,bus-max = <11>;
+			};
+		
+			qcom,gpu-pwrlevel@2 {
+				reg = <0>;
+				qcom,gpu-freq = <675000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <11>;
+				qcom,bus-max = <11>;
+			};
+
+			qcom,gpu-pwrlevel@3 {
+				reg = <1>;
 				qcom,gpu-freq = <585000000>;
 				qcom,bus-freq = <10>;
 				qcom,bus-min = <9>;
 				qcom,bus-max = <11>;
 			};
 
-			qcom,gpu-pwrlevel@2 {
+			qcom,gpu-pwrlevel@4 {
 				reg = <2>;
 				qcom,gpu-freq = <499200000>;
 				qcom,bus-freq = <9>;
@@ -658,7 +676,7 @@
 				qcom,bus-max = <11>;
 			};
 
-			qcom,gpu-pwrlevel@3 {
+			qcom,gpu-pwrlevel@5 {
 				reg = <3>;
 				qcom,gpu-freq = <427000000>;
 				qcom,bus-freq = <6>;
@@ -666,7 +684,7 @@
 				qcom,bus-max = <9>;
 			};
 
-			qcom,gpu-pwrlevel@4 {
+			qcom,gpu-pwrlevel@6 {
 				reg = <4>;
 				qcom,gpu-freq = <345000000>;
 				qcom,bus-freq = <4>;
@@ -674,7 +692,7 @@
 				qcom,bus-max = <5>;
 			};
 
-			qcom,gpu-pwrlevel@5 {
+			qcom,gpu-pwrlevel@7 {
 				reg = <5>;
 				qcom,gpu-freq = <257000000>;
 				qcom,bus-freq = <3>;
@@ -682,7 +700,15 @@
 				qcom,bus-max = <4>;
 			};
 
-			qcom,gpu-pwrlevel@6 {
+			qcom,gpu-pwrlevel@8 {
+				reg = <8>;
+				qcom,gpu-freq = <180000000>;
+				qcom,bus-freq = <3>;
+				qcom,bus-min = <2>;
+				qcom,bus-max = <4>;
+			};
+
+			qcom,gpu-pwrlevel@9 {
 				reg = <6>;
 				qcom,gpu-freq = <0>;
 				qcom,bus-freq = <0>;
@@ -690,7 +716,7 @@
 				qcom,bus-max = <0>;
 			};
 		};
-		qcom,gpu-pwrlevels-1 {
+/*		qcom,gpu-pwrlevels-1 {
 			#address-cells = <1>;
 			#size-cells = <0>;
 
@@ -699,7 +725,7 @@
 
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <675000000>;
+				qcom,gpu-freq = <835000000>;
 				qcom,bus-freq = <11>;
 				qcom,bus-min = <11>;
 				qcom,bus-max = <11>;
@@ -707,13 +733,29 @@
 
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
+				qcom,gpu-freq = <735000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <11>;
+				qcom,bus-max = <11>;
+			};
+		
+			qcom,gpu-pwrlevel@2 {
+				reg = <0>;
+				qcom,gpu-freq = <675000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <11>;
+				qcom,bus-max = <11>;
+			};
+
+			qcom,gpu-pwrlevel@3 {
+				reg = <1>;
 				qcom,gpu-freq = <585000000>;
 				qcom,bus-freq = <10>;
 				qcom,bus-min = <9>;
 				qcom,bus-max = <11>;
 			};
 
-			qcom,gpu-pwrlevel@2 {
+			qcom,gpu-pwrlevel@4 {
 				reg = <2>;
 				qcom,gpu-freq = <499200000>;
 				qcom,bus-freq = <9>;
@@ -721,7 +763,7 @@
 				qcom,bus-max = <11>;
 			};
 
-			qcom,gpu-pwrlevel@3 {
+			qcom,gpu-pwrlevel@5 {
 				reg = <3>;
 				qcom,gpu-freq = <427000000>;
 				qcom,bus-freq = <6>;
@@ -729,7 +771,7 @@
 				qcom,bus-max = <9>;
 			};
 
-			qcom,gpu-pwrlevel@4 {
+			qcom,gpu-pwrlevel@6 {
 				reg = <4>;
 				qcom,gpu-freq = <345000000>;
 				qcom,bus-freq = <4>;
@@ -737,7 +779,7 @@
 				qcom,bus-max = <5>;
 			};
 
-			qcom,gpu-pwrlevel@5 {
+			qcom,gpu-pwrlevel@7 {
 				reg = <5>;
 				qcom,gpu-freq = <257000000>;
 				qcom,bus-freq = <3>;
@@ -745,7 +787,15 @@
 				qcom,bus-max = <4>;
 			};
 
-			qcom,gpu-pwrlevel@6 {
+			qcom,gpu-pwrlevel@8 {
+				reg = <8>;
+				qcom,gpu-freq = <180000000>;
+				qcom,bus-freq = <3>;
+				qcom,bus-min = <2>;
+				qcom,bus-max = <4>;
+			};
+
+			qcom,gpu-pwrlevel@9 {
 				reg = <6>;
 				qcom,gpu-freq = <0>;
 				qcom,bus-freq = <0>;
@@ -754,7 +804,7 @@
 			};
 		};
 	};
-
+*/
 	qcom,l3-pwrlevels {
 		#address-cells = <1>;
 		#size-cells = <0>;
