--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -1,5 +1,7 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-Quantic-Kernel_Beta-6"
+CONFIG_LOCALVERSION="-Quantic-Kernel_RC"
+# Klapse - Linear RGB scaling
+CONFIG_KLAPSE=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -129,7 +131,7 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
-# CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
