--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -17,7 +17,7 @@ source "drivers/gpu/vga/Kconfig"
 
 source "drivers/gpu/host1x/Kconfig"
 source "drivers/gpu/ipu-v3/Kconfig"
-
+source "drivers/video/klapse/Kconfig"
 source "drivers/gpu/drm/Kconfig"
 
 menu "Frame buffer Devices"
