--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -1,7 +1,14 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-Quantic-Kernel_RC"
+CONFIG_LOCALVERSION="-Quantic-Kernel_v1.7"
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
+# Enable blu_schedutil
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDION=y
+# Enable joysticks
+CONFIG_INPUT_JOYSTICK=y
 # Klapse - Linear RGB scaling
 CONFIG_KLAPSE=y
+CONFIG_FIRMWARE_IN_KERNEL=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -38,7 +45,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
+CONFIG_RD_LZ4=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_MEMBARRIER=y
@@ -130,7 +137,7 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_TCP_CONG_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -333,7 +340,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_LAST_TOUCH_EVENTS=y
-CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_ST_FTS_V521=y
 CONFIG_FTS_FOD_AREA_REPORT=y
 CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
@@ -364,7 +370,7 @@ CONFIG_SPI=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
+# CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
 CONFIG_SPMI_SIMULATOR=y
 CONFIG_PM8150_PMIC_SIMULATOR=y
 CONFIG_PM8150B_PMIC_SIMULATOR=y
@@ -423,7 +429,7 @@ CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
+# CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG is not set
 # CONFIG_MSM_SDE_ROTATOR_XLOG_DEBUG is not set
 CONFIG_MSM_NPU=y
 CONFIG_DVB_MPQ=m
@@ -431,8 +437,8 @@ CONFIG_DVB_MPQ_DEMUX=m
 CONFIG_DVB_MPQ_TSPP1=y
 CONFIG_TSPP=m
 CONFIG_DRM=y
-CONFIG_DRM_MSM_REGISTER_LOGGING=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+# CONFIG_DRM_MSM_REGISTER_LOGGING is not set
+# CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 # CONFIG_DRM_SDE_XLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_LT_LT9611=y
@@ -550,7 +556,6 @@ CONFIG_MSM_VIDEOCC_SM8150=y
 CONFIG_MSM_CAMCC_SM8150=y
 CONFIG_CLOCK_CPU_OSM=y
 CONFIG_MSM_DISPCC_SM8150=y
-CONFIG_MSM_DEBUGCC_SM8150=y
 CONFIG_MSM_CLK_RPMH=y
 CONFIG_MSM_GPUCC_SM8150=y
 CONFIG_HWSPINLOCK=y
@@ -880,5 +885,5 @@ CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_AGILESD=y
 CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_CRYPTO_ZSTD=y
