--- a/kernel-spectrum-installer/overlay.d/init.spectrum.rc
+++ b/kernel-spectrum-installer/overlay.d/init.spectrum.rc
@@ -22,47 +22,47 @@ setprop persist.spectrum.kernel Quantic-Kernel
 
 # Balance (default profile)
 on property:persist.spectrum.profile=0
-	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_load 95
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_load 80
+	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_load 95
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_load 80
 	write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1785600
 	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2419200
 	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_max_freq 2841600
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/gold_suspend_freq 825600
 	write /sys/module/workqueue/parameters/power_efficient Y
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_freq 1785600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_freq 2419200
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_freq 2841600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1785600
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_freq 2419200
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_freq 2841600
 	
 # Performance (based on DrunkSauce Lite)
 on property:persist.spectrum.profile=1
-	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_load 90
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/down_rate_limit_us 20000
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/down_rate_limit_us 20000
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_load 90
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/down_rate_limit_us 20000
 	write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1785600
 	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2419200
@@ -70,16 +70,15 @@ on property:persist.spectrum.profile=1
 	write /sys/module/cpu_input_boost/parameters/input_boost_freq_lp 1478400
 	write /sys/module/cpu_input_boost/parameters/input_boost_freq_hp 1286400
 	write /sys/module/cpu_input_boost/parameters/input_boost_freq_gold 1286400
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/platform/soc/2c00000.qcom,kgsl-3d0/kgsl/kgsl-3d0/devfreq/adrenoboost 0
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_freq 1785600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_freq 2419200
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_freq 2841600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/gold_suspend_freq 710400
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/gold_suspend_freq 710400
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/gold_suspend_freq 710400
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1785600
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_freq 2419200
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_freq 2841600
 
 # Battery
 on property:persist.spectrum.profile=2
@@ -103,11 +102,11 @@ on property:persist.spectrum.profile=2
 	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1804800
 	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_max_freq 2534400
 	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/gold_suspend_freq 710400
 	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/silver_suspend_freq 844800
 	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/gold_suspend_freq 825600 25
 	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/gold_suspend_freq 710400
 	write /sys/module/workqueue/parameters/power_efficient Y
 	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_freq 1785600
 	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_freq 2419200
@@ -115,35 +114,35 @@ on property:persist.spectrum.profile=2
 
 # Gaming
 on property:persist.spectrum.profile=3
-	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedion
-	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedion
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_load 80
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/down_rate_limit_us 20000
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/down_rate_limit_us 20000
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/up_rate_limit_us 0
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor schedutil
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_load 80
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/down_rate_limit_us 20000
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/up_rate_limit_us 0
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/down_rate_limit_us 20000
 	write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1785600
 	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2419200
 	write /sys/devices/system/cpu/cpu7/cpufreq/scaling_max_freq 28416000
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/gold_suspend_freq 825600
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/silver_suspend_freq 844800
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/gold_suspend_freq 825600
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/silver_suspend_freq 844800
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/gold_suspend_freq 825600
 	write /sys/devices/platform/soc/2c00000.qcom,kgsl-3d0/kgsl/kgsl-3d0/devfreq/adrenoboost 1
 	write /sys/module/workqueue/parameters/power_efficient Y
-	write /sys/devices/system/cpu/cpu0/cpufreq/schedion/hispeed_freq 1785600
-	write /sys/devices/system/cpu/cpu4/cpufreq/schedion/hispeed_freq 2419200
-	write /sys/devices/system/cpu/cpu7/cpufreq/schedion/hispeed_freq 2841600
+	write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1785600
+	write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_freq 2419200
+	write /sys/devices/system/cpu/cpu7/cpufreq/schedutil/hispeed_freq 2841600
 
 
