--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -437,6 +437,14 @@ CONFIG_DVB_MPQ_DEMUX=m
 CONFIG_DVB_MPQ_TSPP1=y
 CONFIG_TSPP=m
 CONFIG_DRM=y
+CONFIG_DRM_MSM=y
+CONFIG_DRM_MSM_REGISTER_LOGGING=y
+CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+CONFIG_DRM_SDE_RSC=y
+CONFIG_EXPOSURE_ADJUSTMENT=y
+CONFIG_DRM_PANEL=y
+CONFIG_DRM_BRIDGE=y
+CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_MSM_REGISTER_LOGGING is not set
 # CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 # CONFIG_DRM_SDE_XLOG_DEBUG is not set
