Set ZRAM to 2GB as this is the sweet point I found

--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -882,8 +882,5 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_DCTCP=y
 CONFIG_TCP_CONG_CDG=y
-CONFIG_TCP_CONG_BBR=y
-CONFIG_TCP_CONG_AGILESD=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="bbr"
-CONFIG_CRYPTO_ZSTD=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_SIZE_OVERRIDE=2
