--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -276,7 +276,6 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_NFC_NQ=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_QCOM=y
@@ -342,7 +341,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_LAST_TOUCH_EVENTS=y
 CONFIG_TOUCHSCREEN_ST_FTS_V521=y
 CONFIG_FTS_FOD_AREA_REPORT=y
-CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_I2C_BY_DMA=y
 CONFIG_INPUT_MISC=y
@@ -420,7 +418,6 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
@@ -526,7 +523,6 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_DMADEVICES=y
 CONFIG_QCOM_GPI_DMA=y
-CONFIG_DEBUG_DMA_BUF_REF=y
 CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
@@ -565,8 +561,6 @@ CONFIG_MSM_QMP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_QCOM_LAZY_MAPPING=y
-CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
 CONFIG_IOMMU_TESTS=y
 CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
@@ -629,7 +623,6 @@ CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_RMNET_CTL=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_AOP_DDR_MESSAGING=y
@@ -689,16 +682,12 @@ CONFIG_SDCARD_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
-CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_DEBUG_NOTIFIERS=y
 CONFIG_IPC_LOGGING=y
-CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
@@ -803,7 +792,6 @@ CONFIG_NF_NAT=y
 CONFIG_POSIX_TIMERS=y
 CONFIG_PROC_FS=y
 CONFIG_QUOTACTL=y
-CONFIG_SCHED_DEBUG=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SHMEM=y
@@ -835,7 +823,6 @@ CONFIG_QCOM_LTE_COEX=y
 CONFIG_MPC_UT_FRAMEWORK=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_FEATURE_TSO=y
-CONFIG_FEATURE_TSO_DEBUG=y
 CONFIG_WLAN_FASTPATH=y
 CONFIG_WLAN_NAPI=y
 CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
@@ -884,3 +871,6 @@ CONFIG_TCP_CONG_DCTCP=y
 CONFIG_TCP_CONG_CDG=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=2
+CONFIG_TCP_CONG_AGILESD=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_CRYPTO_ZSTD=y
