Add cpu big and prime mask

--- a/arch/arm64/configs/Quantic_cepheus_defconfig
+++ b/arch/arm64/configs/Quantic_cepheus_defconfig
@@ -1,5 +1,5 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-Quantic-Kernel_v1.8"
+CONFIG_LOCALVERSION="-Quantic-Kernel_v1.9"
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
 # Enable blu_schedutil
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
@@ -14,7 +14,7 @@ CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_IRQ_TIME_ACCOUNfTING=y
 CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -875,3 +875,7 @@ CONFIG_TCP_CONG_AGILESD=y
 CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_CRYPTO_ZSTD=y
 CONFIG_EXPOSURE_ADJUSTMENT=y
+CONFIG_WIREGUARD=y
+CONFIG_LITTLE_CPU_MASK=0
+CONFIG_BIG_CPU_MASK=0
+CONFIG_PRIME_CPU_MASK=0
